--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,7 +1,6 @@
 .cards {
   padding-top: 20px;
-  width: 1280px;
-  margin: 0 80px 136px;
+  max-width: 1280px;
 }
 
 .cards__list {
@@ -10,5 +9,6 @@
   margin: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
   gap: 40px 20px;
 }
