--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,7 +5,6 @@
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   margin: 0 80px;
   max-width: 1280px;
-  width: 100%;
 }
 
 .profile__add-btn {
@@ -14,6 +13,7 @@
   color: #fcf5e5;
   width: 149px;
   height: 52px;
+  margin-top: auto;
 }
 
 .profile__edit-btn {
@@ -53,7 +53,6 @@
 }
 
 .profile__name {
-  height: 32px;
   color: #212121;
   margin: 0 0 12px;
   font-weight: 500;
