--- a/blocks/card.css
+++ b/blocks/card.css
@@ -29,3 +29,9 @@
   background-color: transparent;
   opacity: 40%;
 }
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+}
