--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -57,7 +57,13 @@
   margin: 0 0 12px;
   font-weight: 500;
   font-size: 32px;
-  line-height: 100%;
+  line-height: 1;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
@@ -68,4 +74,51 @@
   font-size: 16px;
   line-height: 100%;
   margin: 0;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    text-align: center;
+  }
+  .profile__avatar {
+    margin: auto;
+    height: 80px;
+    width: 80px;
+    padding-top: 20px;
+    margin-bottom: 12px;
+  }
+
+  .profile__column {
+    margin: 0 0 20px;
+    display: flex;
+    align-items: center;
+  }
+
+  .profile__name {
+    font-size: 20px;
+    margin-bottom: 6px;
+    max-width: 288px;
+  }
+
+  .profile__description {
+    margin: 0 0 32px;
+    max-width: 288px;
+  }
+
+  .profile__add-btn {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+.profile__edit-btn {
+  justify-content: center;
 }
