--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -18,4 +18,8 @@
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
   }
+
+  .cards {
+    border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  }
 }
