--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,32 +6,53 @@
 .card__image {
   height: 413px;
   width: 413px;
-  border-radius: 2%;
+  border-radius: 8px;
   object-fit: cover;
   display: block;
   max-width: 100%;
 }
 
 .card__title {
-  padding: 12px 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  color: rgba(33, 33, 33, 1);
+  margin: 0;
 }
 
 .card__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 12px;
 }
 .card__like-button {
-  background-image: url(../images/like.svg);
+  background-image: url(../images/Like.svg);
   width: 1.5em;
   height: 1.3em;
   border: none;
   background-color: transparent;
   opacity: 40%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.card__like-button:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
+  }
+
+  .card__like-button {
+    width: 1.2em;
+    height: 1em;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 100%;
   }
 }
