--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,6 @@
 .cards {
   padding-top: 20px;
+  padding-bottom: 40px;
   max-width: 1280px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
@@ -15,11 +16,12 @@
 }
 
 @media screen and (max-width: 627px) {
-  .cards__list {
-    grid-template-columns: repeat(auto-fit, 288px);
+  .cards {
+    max-width: 627px;
   }
 
-  .cards {
-    border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    gap: 50px 16px;
   }
 }
