--- a/blocks/card.css
+++ b/blocks/card.css
@@ -18,6 +18,11 @@
   line-height: 120%;
   color: rgba(33, 33, 33, 1);
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding-top: 12px;
+  padding-bottom: 20px;
 }
 
 .card__content {
