--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,8 +21,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  padding-top: 12px;
-  padding-bottom: 20px;
+  max-width: 350px;
 }
 
 .card__content {
@@ -44,6 +43,7 @@
 
 .card__like-button:hover {
   cursor: pointer;
+  opacity: 1;
 }
 
 @media screen and (max-width: 627px) {
@@ -59,5 +59,6 @@
   .card__title {
     font-size: 16px;
     line-height: 100%;
+    max-width: 250px;
   }
 }
