--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -21,10 +21,11 @@
 @media screen and (max-width: 627px) {
   .cards {
     max-width: 627px;
+    padding-bottom: 20px;
   }
 
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    gap: 50px 16px;
+    gap: 20px;
   }
 }
