--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,10 +17,16 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
+  border-radius: 8px;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile__add-btn:hover {
   cursor: pointer;
+  opacity: 0.8;
 }
 
 .profile__edit-btn {
@@ -34,11 +40,12 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
-  color: black;
+  color: #212121;
 }
 
 .profile__edit-btn:hover {
   cursor: pointer;
+  opacity: 1;
 }
 
 .profile__avatar {
@@ -47,7 +54,6 @@
   margin-right: 20px;
   border-radius: 8px;
   max-width: 100%;
-  height: 190px;
 }
 
 .profile__column {
@@ -93,6 +99,7 @@
     flex-direction: column;
     max-width: 288px;
     text-align: center;
+    padding-top: 20px;
   }
   .profile__avatar {
     margin: auto;
