--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,15 +10,17 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  opacity:0;
-  transition:visibility 0s linear 0.5s,opacity 0.5s linear;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
+
 
 .modal_is-opened {
   visibility: visible;
-  opacity:1;
-  transition-delay:0s;
+  opacity: 1;
+  transition-delay: 0s;
 }
+
 
 .modal__container {
   position: relative;
@@ -27,6 +29,7 @@
   background-color: #fff;
   border-radius: 8px;
   padding: 32px 50px;
+  box-sizing: border-box;
 }
 
 .modal__close-btn {
@@ -35,26 +38,59 @@
   height: 40px;
   top: 32px;
   right: 50px;
+  border: none;
+  background: none;
+  opacity: 40%;
+  cursor: pointer;                   
+  transition: opacity 0.3s ease;     
 }
+
+.modal__close-btn:hover {
+  opacity: 1;                        
+}
+
 
 .modal__submit-btn {
   background-color: #212121;
-  color: #fcf5e5;
-  max-width: 156px;
+  color: #FCF5E5;
+  width: 100%;
   height: 52px;
   border-radius: 8px;
   padding: 18px 32px;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
+  border: 0;
+  cursor: pointer;                   
+  transition: background-color 0.3s ease;
 }
+
+.modal__submit-btn:hover {
+  background-color: #353535;         
+}
+
+
 .modal__title {
   margin: 0 0 32px;
   font-size: 32px;
   font-weight: 500;
 }
 
+
 .modal__form {
   display: flex;
   flex-direction: column;
 }
+
+.modal__label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;                         
+  color: #212121b2;
+  font-size: 16px;
+  margin: 0 0 32px;
+}
+
 
 .modal__input {
   display: block;
@@ -62,6 +98,12 @@
   border-radius: 8px;
   border: 1px solid #21212166;
   padding: 16px 12px;
+  box-sizing: border-box;            
+  transition: border-color 0.3s ease;
+}
+
+.modal__input:hover {
+  border-color: #212121;             
 }
 
 .modal__input::placeholder {
@@ -70,29 +112,60 @@
   font-weight: 500;
 }
 
-.modal__label {
-  color: #212121b2;
-  font-size: 16px;
-  margin: 0 0 32px;
-}
 
 @media screen and (max-width: 627px) {
+
+  .modal__container {
+    padding: 12px 24px;
+    max-width: 300px;
+    width: 100%;
+    border-radius: 8px;
+    margin: 134px auto 0;
+    box-sizing: border-box;
+  }
+
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .modal__submit-btn {
-    max-width: none;
+    width: 100%;
+    height: 52px;
     font-size: 16px;
+    font-weight: 500;
+    border-radius: 8px;
+    padding: 18px 32px;
+    border: 0;
+    background-color: #212121;
+    color: #FCF5E5;
   }
 
   .modal__label {
-    margin: 0 0 24px;
-    font-size: 16px;
+    margin: 0;                     
+  }
+
+  .modal__form {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
   }
 
   .modal__title {
     font-size: 20px;
-    margin: 0 0 24px;
+    margin-bottom: 24px;
   }
 
-  .modal__input::placeholder {
-    font-size: 16px;
+  .modal__input {
+    font-size: 14px;
+    height: 40px;
+    padding: 8px 12px;
   }
 }
+
