--- a/blocks/card.css
+++ b/blocks/card.css
@@ -46,6 +46,39 @@
   opacity: 1;
 }
 
+.card__like-button_active {
+  background-image: url(../images/like-active.svg);
+  opacity: 100%;
+}
+
+.card__like-button_active:hover {
+  background-image: url(../images/like-active.svg);
+  opacity: 0.4;
+}
+
+.card__image-container {
+  position: relative;
+}
+
+.card__delete-button{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  margin: 0;
+  z-index: 2;
+}
+
+.card__delete-button:hover img {
+  content: url('../images/delete-hover.svg');
+
+}
+
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
