--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,6 +12,7 @@
   padding: 10px;
   opacity: 0;
   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  z-index: 1000;
 }
 
 
@@ -41,13 +42,13 @@
   border: none;
   background: none;
   opacity: 40%;
-  cursor: pointer;                   
-  transition: opacity 0.3s ease;  
-  padding: 0;   
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+  padding: 0;
 }
 
 .modal__close-btn:hover {
-  opacity: 1;                        
+  opacity: 1;
 }
 
 
@@ -63,12 +64,12 @@
   line-height: 100%;
   font-weight: 500;
   border: 0;
-  cursor: pointer;                   
+  cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .modal__submit-btn:hover {
-  opacity: 0.8;   
+  opacity: 0.8;
 
 }
 
@@ -88,7 +89,7 @@
 .modal__label {
   display: flex;
   flex-direction: column;
-  gap: 8px;                         
+  gap: 8px;
   color: #212121b2;
   font-size: 16px;
   margin: 0 0 32px;
@@ -101,20 +102,53 @@
   border-radius: 8px;
   border: 1px solid #21212166;
   padding: 16px 12px;
-  box-sizing: border-box;            
+  box-sizing: border-box;
   transition: border-color 0.3s ease;
   font-size: 20px;
   line-height: 1;
 }
 
 .modal__input:hover {
-  border-color: #212121;             
+  border-color: #212121;
 }
 
 .modal__input::placeholder {
   color: #2121214d;
   font-size: 20px;
   font-weight: 500;
+}
+
+#preview-image-modal .modal__close-btn {
+ position: absolute;
+  top: 16px;
+  right: 16px;
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  background: none;
+  border: none;
+  opacity: 0.4;
+  cursor: pointer;
+  padding: 0;
+}
+
+
+#preview-image-modal .modal__close-btn:hover {
+  opacity: 1;
+}
+
+.modal__preview-image {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
+
+.modal__preview-caption {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  margin: 0;
 }
 
 
@@ -131,7 +165,7 @@
     right: 12px;
     width: 24px;
     height: 24px;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -142,7 +176,7 @@
   }
 
   .modal__label {
-    margin: 0;                     
+    margin: 0;
   }
 
   .modal__form {
@@ -155,8 +189,8 @@
   }
 
   .modal__input {
-    font-size: 16px;    
-    
+    font-size: 16px;
+
   }
 }
 
