--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,6 +10,7 @@
   object-fit: cover;
   display: block;
   max-width: 100%;
+  cursor: pointer;
 }
 
 .card__title {
@@ -31,7 +32,7 @@
   margin-top: 12px;
 }
 .card__like-button {
-  background-image: url(../images/Like.svg);
+  background-image: url(../images/like.svg);
   width: 1.5em;
   height: 1.3em;
   border: none;
