--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -15,6 +15,10 @@
   z-index: 1000;
 }
 
+.modal_type_preview{
+  padding: 0 16px;
+}
+
 
 .modal_is-opened {
   visibility: visible;
@@ -118,8 +122,8 @@
   font-weight: 500;
 }
 
-#preview-image-modal .modal__close-btn {
- position: absolute;
+.modal__close-btn_type_preview {
+  position: absolute;
   top: 16px;
   right: 16px;
   z-index: 2;
@@ -131,24 +135,39 @@
   cursor: pointer;
   padding: 0;
 }
-
-
-#preview-image-modal .modal__close-btn:hover {
+.modal__close-btn_type_preview:hover {
   opacity: 1;
 }
 
+
+.modal__preview-container {
+  position: relative;
+  display: inline-block;
+  background: transparent;
+  padding: 0;
+  border-radius: 0;
+}
+
 .modal__preview-image {
-  max-width: 80%;
-  max-height: 80%;
+  display: block;
+  max-width: 80vw;
+  max-height: 80vh;
   border-radius: 8px;
   margin-bottom: 16px;
+  width: auto;
+  height: auto;
 }
 
 .modal__preview-caption {
   font-size: 20px;
   font-weight: 500;
-  text-align: center;
+  color: #fff;
+  background-color: #212121;
   margin: 0;
+  padding: 4px 8px;
+  border-radius: 8px;
+  display: inline-block;
+
 }
 
 
@@ -159,6 +178,13 @@
     max-width: 300px;
     width: 100%;
   }
+
+
+  .modal__preview-caption {
+    font-size: 16px;
+
+  }
+
 
   .modal__close-btn {
     top: 22px;
@@ -191,6 +217,10 @@
   .modal__input {
     font-size: 16px;
 
+  }
+
+  .modal__preview-image {
+   max-width: unset;
   }
 }
 
